Add new algorythm to the project to calculate which meals will be best for the user based on its preference